# binance-usdm-parquet-data

./: .gitignore  README.md  pyproject.toml
src/binance_usdm_parquet_data/: __init__.py  archive_download.py  archive_index.py  archive_refresh.py  cli.py  config.py  duckdb_optimize.py  funding_archive.py  funding_rate.py  funding_refresh.py  funding_rest.py  http_client.py  liquidity.py  locks.py  manifest.py  parquet_storage.py  paths.py  premium_index.py  quality.py  reader_sql.py  readers.py  records.py  refresh.py  status_scan.py  storage_keys.py  symbol_universe.py
tests/: test_archive_download.py  test_archive_index.py  test_cli_refresh_status.py  test_cli_security.py  test_contract.py  test_funding_rate.py  test_funding_refresh.py  test_manifest.py  test_market_data_paths.py  test_market_data_readers.py  test_parquet_optimization.py  test_premium_index.py  test_quality_locking.py  test_refresh_orchestration.py  test_symbol_universe.py
