[project]
name = "binance-usdm-parquet-data"
version = "0.1.0"
description = "Archive-first Binance USD-M USDT Parquet collector with DuckDB optimized layouts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "duckdb>=1.4.0",
    "httpx2[http2,brotli,zstd]>=0.28.0",
    "polars>=1.35.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.0",
    "typer>=0.20.0",
]

[project.scripts]
binance-usdm-data = "binance_usdm_parquet_data.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportPrivateUsage = "error"
reportUnknownMemberType = "none"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "TC003",
    "TC001",
    "TC006",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S106",
    "ARG",
    "PLR2004",
    "SLF001",
    "D",
]
"src/binance_usdm_parquet_data/cli.py" = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
